# Audyn

./: LICENSE  README.md  Source-License
audyn/: README.md  pubspec.yaml
audyn/android/: build.gradle.kts
audyn/android/app/: build.gradle.kts
audyn/ios/Runner/: Info.plist
audyn/lib/: audio_handler.dart  main.dart
audyn/lib/core/models/: music_track.dart  (+1 more)
audyn/lib/utils/: playlist_cover_generator.dart
audyn/lib/widget/: track_list_item.dart
audyn/lib/widgets/: animated_bottom_player.dart
audyn0/: README.md  pubspec.yaml
audyn0/android/: build.gradle.kts
audyn0/android/app/: build.gradle.kts
audyn0/android/app/src/main/cpp/: CMakeLists.txt  LibtorrentWrapper.cpp
audyn0/ios/Runner/: Info.plist
audyn0/ios/Runner.xcodeproj/: project.pbxproj
audyn0/lib/: client_supabase.dart  main.dart
audyn0/lib/services/: auth_service.dart  music_seeder_service.dart  swarm_metadata_service.dart
audyn0/lib/src/: app.dart
audyn0/lib/utils/: CryptoHelper.dart  file_hasher.dart  file_probe.dart  supabase_client.dart
audyn0/lib/widgets/: base_scaffold.dart  login_bubble.dart
audyn0/test/: widget_test.dart
audyn0/web/: index.html  manifest.json
audyn_prototype_full/: README.md  pubspec.yaml
audyn_prototype_full/android/app/: build.gradle.kts
audyn_prototype_full/ios/Runner.xcodeproj/: project.pbxproj
audyn_prototype_full/lib/: audio_handler.dart  main.dart
audyn_prototype_full/linux/: CMakeLists.txt
audyn_prototype_full/test/: widget_test.dart
audyn_prototype_full/web/: index.html  manifest.json
audyn_prototype_full/windows/: CMakeLists.txt
(+96 files in other folders)
